Реализовано удаление дела с помощью кнопки

--- a/Todo_list/MainWindow.xaml
+++ b/Todo_list/MainWindow.xaml
@@ -44,7 +44,8 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="X"
-                                    Background="#5EBEC4">
+                                    Background="#5EBEC4"
+                                    Click="DeleteTask_Click">
                             </Button>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
