--- a/Todo_list/App.xaml
+++ b/Todo_list/App.xaml
@@ -4,6 +4,26 @@
              xmlns:local="clr-namespace:Todo_list"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        
+        <Style TargetType="Button">
+            <Setter Property="Background" Value="#5EBEC4"/>
+            <Setter Property="Padding" Value="5"/>
+            <Setter Property="FontFamily" Value="Cascadia Mono"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+
+        <Style TargetType="TextBox">
+            <Setter Property="BorderThickness" Value="1.5"/>
+            <Setter Property="BorderBrush" Value="#5EBEC4"/>
+        </Style>
+
+        <Style x:Key="HeaderStyle">
+            <Setter Property="TextBlock.FontSize" Value="26"/>
+            <Setter Property="TextBlock.Margin" Value="5"/>
+            <Setter Property="TextBlock.Foreground" Value="#5EBEC4"/>
+            <Setter Property="TextBlock.FontWeight" Value="SemiBold"/>
+            <Setter Property="TextBlock.FontFamily" Value="Cascadia Mono"/>
+        </Style>
+
     </Application.Resources>
 </Application>
