--- a/Todo_list/App.xaml
+++ b/Todo_list/App.xaml
@@ -6,15 +6,30 @@
     <Application.Resources>
         
         <Style TargetType="Button">
-            <Setter Property="Background" Value="#5EBEC4"/>
-            <Setter Property="Padding" Value="5"/>
-            <Setter Property="FontFamily" Value="Cascadia Mono"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Style.Setters>
+                <Setter Property="Background" Value="#5EBEC4"/>
+                <Setter Property="Padding" Value="5"/>
+                <Setter Property="FontFamily" Value="Cascadia Mono"/>
+                <Setter Property="BorderThickness" Value="0"/>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="Control.IsMouseOver" Value="True">
+                    <Setter Property="BorderThickness" Value="3"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <Style TargetType="TextBox">
-            <Setter Property="BorderThickness" Value="1.5"/>
-            <Setter Property="BorderBrush" Value="#5EBEC4"/>
+            <Style.Setters>
+                <Setter Property="BorderThickness" Value="1.5"/>
+                <Setter Property="BorderBrush" Value="#5EBEC4"/>
+            </Style.Setters>
+            <Style.Triggers>
+                <Trigger Property="Control.IsFocused" Value="True">
+                    <Setter Property="Background" Value="#FFFFFAD6"/>
+                    <Setter Property="BorderThickness" Value="2"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
 
         <Style x:Key="HeaderStyle">
