--- a/Todo_list/MainWindow.xaml
+++ b/Todo_list/MainWindow.xaml
@@ -56,7 +56,7 @@
             <Image Source="/Images/add.png"/>
         </Button>
 
-        <DataGrid x:Name="dataGridToDo"
+        <!--<DataGrid x:Name="dataGridToDo"
                   Grid.Row="1"
                   Style="{StaticResource DataGridStyle}"
                   Margin="7 0">
@@ -98,7 +98,63 @@
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
 
-        </DataGrid>
+        </DataGrid>-->
+
+        <ListBox x:Name="dataGridToDo"
+                 Grid.Row="1"
+                 Margin="7 0">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid HorizontalAlignment="Stretch">
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <StackPanel Grid.Row="0" Grid.Column="0"
+                                    Orientation="Horizontal">
+                            <CheckBox Margin="2, 0, 2, 0"
+                                      Checked="CheckBox_Checked"
+                                      Unchecked="CheckBox_Unchecked"
+                                      IsChecked="{Binding Path=Done}"
+                                      HorizontalAlignment="Left"/>
+
+                            <TextBlock Grid.Row="0" Grid.Column="1"
+                                       Text="{Binding Path=Title}"
+                                       HorizontalAlignment="Left"/>
+                        </StackPanel>
+
+                        <StackPanel Grid.Row="0" Grid.Column="0"
+            Orientation="Horizontal">
+                            <TextBlock Grid.Row="0" Grid.Column="2"
+                                       Text="{Binding Path=Date}"
+                                       HorizontalAlignment="Right"/>
+
+                            <Button Grid.Row="0" Grid.Column="3"
+                                    Background="#5EBEC4"
+                                    Click="DeleteTask_Click"
+                                    HorizontalAlignment="Right">
+                                <Image Source="/Images/delete.png"
+                                       MaxHeight="10"
+                                       MaxWidth="10"/>
+                            </Button>
+
+                            <TextBlock Grid.Row="1" Grid.Column="0"
+     Text="{Binding Path=Description}"/>
+                            <!--MaxLines="4"
+     VerticalScrollBarVisibility="Auto"-->
+                        </StackPanel>
+
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
 
         <ProgressBar Grid.Row="2"
                      x:Name="progressBarToDo"
