--- a/Todo_list/MainWindow.xaml
+++ b/Todo_list/MainWindow.xaml
@@ -12,17 +12,36 @@
 
     <Window.Resources>
 
+        <local:DateTimeLessDateConverter x:Key="LessDayConverter"/>
+        <local:DateTimeEqualDateConverter x:Key="EqualDayConverter"/>
+        <local:DateTimeTomorrowDateConverter x:Key="TomorrowDayConverter"/>
+        <local:DateTimeGreaterDateConverter x:Key="GreaterDayConverter"/>
+
+        <Style x:Key="DateStyle" TargetType="TextBlock">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Path=Date, Converter={StaticResource LessDayConverter}}"
+                             Value="True">
+                    <Setter Property="Foreground" Value="Red"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Date, Converter={StaticResource EqualDayConverter}}"
+                             Value="True">
+                    <Setter Property="Foreground" Value="#FFEA6A20"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Date, Converter={StaticResource TomorrowDayConverter}}"
+                             Value="True">
+                    <Setter Property="Foreground" Value="#DAA520"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding Path=Date, Converter={StaticResource GreaterDayConverter}}"
+                             Value="True">
+                    <Setter Property="Foreground" Value="#FF71C52F"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="ProgressBarStyle" TargetType="ProgressBar">
             <Style.Setters>
                 <Setter Property="Maximum" Value="{Binding ItemsCount}"/>
-                
-                <!--"{Binding ElementName=listBoxToDo, Path=Items.Count}"/>-->
-                
                 <Setter Property="Value" Value="{Binding DoneItemsCount}"/>
-                
-                <!--"{Binding ElementName=listBoxToDo,
-                    Path=Items.Count, Converter={StaticResource progressbarValueConverter}}"-->
-                
                 <Setter Property="Foreground" Value="#5EBEC4"/>
                 <Setter Property="Background" Value="#FFFDFAF1"/>
             </Style.Setters>
@@ -64,50 +83,6 @@
             <Image Source="/Images/add.png"/>
         </Button>
 
-        <!--<DataGrid x:Name="dataGridToDo"
-                  Grid.Row="1"
-                  Style="{StaticResource DataGridStyle}"
-                  Margin="7 0">
-
-            <DataGrid.Columns>
-
-                <DataGridTemplateColumn Width="0.05*">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <CheckBox Checked="CheckBox_Checked"
-                                      Unchecked="CheckBox_Unchecked"
-                                      IsChecked="{Binding Path=Done}"/>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-
-                <DataGridTextColumn Binding="{Binding Path=Title}" Width="0.6*"/>
-                <DataGridTextColumn Binding="{Binding Path=Date}" Width="0.3*"/>
-
-                <DataGridTemplateColumn Width="0.05*">
-                    <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
-                            <Button Background="#5EBEC4"
-                                    Click="DeleteTask_Click">
-                                <Image Source="/Images/delete.png"
-                                       MaxHeight="10"
-                                       MaxWidth="10"/>
-                            </Button>
-                        </DataTemplate>
-                    </DataGridTemplateColumn.CellTemplate>
-                </DataGridTemplateColumn>
-            </DataGrid.Columns>
-
-            <DataGrid.RowDetailsTemplate>
-                <DataTemplate>
-                    <TextBox Text="{Binding Path=Description}"
-                             MaxLines="4"
-                             VerticalScrollBarVisibility="Auto"/>
-                </DataTemplate>
-            </DataGrid.RowDetailsTemplate>
-
-        </DataGrid>-->
-
         <ListBox x:Name="listBoxToDo"
                  Grid.Row="1"
                  Margin="7 0"
@@ -147,8 +122,8 @@
                                    Margin="2 0 2 0"
                                    HorizontalAlignment="Right"
                                    FontSize="14"
-                                   Text="{Binding Path=Date}"/>
-                        <!--Style="{StaticResource ColorR}"/>-->
+                                   Style="{StaticResource DateStyle}"
+                                   Text="{Binding Path=Date, StringFormat=dd.MM.yyyy}"/>
 
                         <Button Name="deleteTask_button"
                                 Click="DeleteTask_Click"
@@ -171,45 +146,6 @@
                             <TextBlock FontSize="12"
                                        Text="{Binding Path=Description}"/>
                         </ScrollViewer>
-                        
-
-
-
-
-                        <!--<StackPanel Grid.Row="0" Grid.Column="0"
-                                    Orientation="Horizontal">
-                            <CheckBox Margin="2, 0, 2, 0"
-                                      Checked="CheckBox_Checked"
-                                      Unchecked="CheckBox_Unchecked"
-                                      IsChecked="{Binding Path=Done}"
-                                      HorizontalAlignment="Left"/>
-
-                            <TextBlock Grid.Row="0" Grid.Column="1"
-                                       Text="{Binding Path=Title}"
-                                       HorizontalAlignment="Left"/>
-                        </StackPanel>
-
-                        <StackPanel Grid.Row="0" Grid.Column="0"
-            Orientation="Horizontal">
-                            <TextBlock Grid.Row="0" Grid.Column="2"
-                                       Text="{Binding Path=Date}"
-                                       HorizontalAlignment="Right"/>
-
-                            <Button Grid.Row="0" Grid.Column="3"
-                                    Background="#5EBEC4"
-                                    Click="DeleteTask_Click"
-                                    HorizontalAlignment="Right">
-                                <Image Source="/Images/delete.png"
-                                       MaxHeight="10"
-                                       MaxWidth="10"/>
-                            </Button>
-
-                            <TextBlock Grid.Row="1" Grid.Column="0"
-     Text="{Binding Path=Description}"/>
-                            --><!--MaxLines="4"
-     VerticalScrollBarVisibility="Auto"--><!--
-                        </StackPanel>-->
-
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
